[tool.poetry]
name = "infra"
version = "0.1.0"
description = "Ansible roles to setup my infrastructure both on-prem and in cloud"
authors = ["TimFB <oss@timfb.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^11.3.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^25.0.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
