[project]
name = "infra"
version = "0.1.0"
description = "Ansible roles to setup my infrastructure both on-prem and in cloud"
authors = [{ name = "TimFB", email = "oss@timfb.dev" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = ["ansible>=13.3,<14"]

[dependency-groups]
dev = ["ansible-lint>=25.4.0,<26 ; platform_system != 'Windows'"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
